--- a/skirmish.html
+++ b/skirmish.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
+<head>
+
     <link rel="stylesheet" href="skirmish.css"/>
     <script src="skirmish.js"></script>
-        <meta charset="utf-8">
-        <title>Skirmish</title>
+    <meta charset="utf-8">
+    <title>Skirmish</title>
 
-    </head>
-
-
-
-    <body>
+</head>
 
 
 
-<div class="Blob">
-
-    <div id="BlobRed1"></div>
-
-    <div id="BlobRed2"></div>
 
 
+<body>
 
-    <div onclick="SelectBlob1()" id="BlobBlue1"></div>
+    <div>
 
-</div>
+        <div id="BlobRed1" class="Blob BlobRed" onclick="SelectBlob(this)"></div>
+
+        <div id="BlobRed2" class="Blob BlobRed" onclick="SelectBlob(this)"></div>
 
 
-    </body>
+
+        <div id="BlobBlue1" class="Blob BlobBlue" onclick="SelectBlob(this)"></div>
+    </div>
+
+</body>
 
 </html>
