Gave container a class and moved some whitespace.

--- a/skirmish.html
+++ b/skirmish.html
@@ -22,24 +22,24 @@
 
     <div class="map">
 
-    <div>
+        <div id="Blobs">
 
-        <div id="BlobRed1" class="Blob BlobRed" onclick="SelectBlobP1(this)"></div>
+            <div id="BlobRed1" class="Blob BlobRed" onclick="SelectBlobP1(this)"></div>
 
-        <div id="BlobRed2" class="Blob BlobRed" onclick="SelectBlobP1(this)"></div>
+            <div id="BlobRed2" class="Blob BlobRed" onclick="SelectBlobP1(this)"></div>
 
 
 
-        <div id="BlobBlue1" class="Blob BlobBlue" onclick="SelectBlobP2(this)"></div>
+            <div id="BlobBlue1" class="Blob BlobBlue" onclick="SelectBlobP2(this)"></div>
 
-        <div id="BlobBlue2" onclick="SelectBlobP2(this)"></div>
+            <div id="BlobBlue2" onclick="SelectBlobP2(this)"></div>
 
-        <div id="button">
-            <button onclick="SpawnBlob()">Spawn</button>
+            <div id="button">
+                <button onclick="SpawnBlob()">Spawn</button>
+            </div>
+
+
         </div>
-
-
-    </div>
 
     </div>
 
