Added a sidepanel div, moved the map div under it.

--- a/skirmish.html
+++ b/skirmish.html
@@ -20,7 +20,12 @@
 
 <body>
 
-    <div class="map">
+    <div id="sidepanel">
+    five
+
+    </div>
+
+    <div id="map">
 
 
         <div id="RedBlobs">
