Added Darkmode, button to toggle.

--- a/skirmish.html
+++ b/skirmish.html
@@ -21,7 +21,13 @@
 <body>
 
     <div id="sidepanel">
-    five
+
+        <div id="ActivateDarkMode">
+            <button onclick="DarkModeOn()">DarkMode</button>
+        </div>
+        <div id="ActivateLightMode">
+            <button onclick="LightModeOn()">LightMode</button>
+        </div>
 
     </div>
 
