Reorganized and cleaned the buttons code, removed some obsolete code.
Put all the buttons in one div. Removed unnecesary positioning from
Buttons div. Removed an obsolete blob definition; was lingering from old
Spawn function. Added some whitespace in html.

--- a/skirmish.html
+++ b/skirmish.html
@@ -22,15 +22,18 @@
 
     <div id="sidepanel">
 
-        <div id="buttons">
+
+        <div id="Buttons">
             <button id="DarkModeButton" onclick="DarkModeOn()">DarkMode</button>
             <button id="LightModeButton" onclick="LightModeOn()">LightMode</button>
-            <div id="SpawnButtons">
-                    <button id="SpawnRedButton" onclick="CreateRedBlob()">Spawn</button>
-                    <button id="SpawnBlueButton" onclick="CreateBlueBlob()">Spawn</button>
-            </div>
+            <button id="SpawnRedButton" onclick="CreateRedBlob()">Spawn</button>
+            <button id="SpawnBlueButton" onclick="CreateBlueBlob()">Spawn</button>
         </div>
+
+
     </div>
+
+
 
     <div id="map">
 
@@ -38,7 +41,6 @@
         <div id="RedBlobs">
 
             <div id="RedBlob1" class="Blob SmallBlob RedBlob" onclick="SelectBlobP1(this)"></div>
-
             <div id="RedBlob2" class="Blob SmallBlob RedBlob" onclick="SelectBlobP1(this)"></div>
 
         </div>
@@ -48,9 +50,8 @@
 
             <div id="BlueBlob1" class="Blob SmallBlob BlueBlob" onclick="SelectBlobP2(this)"></div>
 
-            <div id="BlueBlob2" onclick="SelectBlobP2(this)"></div>
-
         </div>
+
     </div>
 </div>
 </body>
