Large change to theming. 3 themes now. Moved a lot from JS to CSS.
Themes are now set as 1 class on body, all the theme specific styles are
derived from that in the CSS.

--- a/skirmish.html
+++ b/skirmish.html
@@ -18,12 +18,13 @@
 
 
 
-<body>
+<body class="LightMode">
     <div id="sidepanel">
 
 
         <div id="Buttons">
-            <button id="DarkModeButton" onclick="DarkModeOn()">DarkMode</button>
+            <button id="DarkMode1Button" onclick="DarkMode1On()">DarkMode</button>
+            <button id="DarkMode2Button" onclick="DarkMode2On()">DarkMode2</button>
             <button id="LightModeButton" onclick="LightModeOn()">LightMode</button>
             <button id="SpawnRedButton" onclick="CreateRedBlob()">Spawn</button>
             <button id="SpawnBlueButton" onclick="CreateBlueBlob()">Spawn</button>
