Added polyfill for IE11. Adjusted IE9 and below warning accordingly

--- a/skirmish.html
+++ b/skirmish.html
@@ -9,9 +9,10 @@
     <title>Skirmish</title>
 
     <!--[if lte IE 9]>
-    You seem to be using a version of Internet Explorer below IE10. This means you browser is no longer recieving security updates. Please consider upgrading to IE10 or higher, or even better, use Firefox, Chrome or any other browser. Blobby will not function properly on IE versions below IE10.
-      <![endif]-->
-    <!--This is because of Element.classList being used in skirmish.js -->
+        <script>
+            alert("You seem to be using a version of Internet Explorer below IE10. This means you browser is no longer recieving security updates. Please consider upgrading to IE11, or even better, use Firefox, Chrome or any other browser. Blobby probably won't function properly on this version of IE")
+        </script>
+     <![endif]-->
 </head>
 
 
