--- a/skirmish.html
+++ b/skirmish.html
@@ -41,13 +41,22 @@
 
 
         <div id="RedBlobs">
-            <div id="RedBlob1" class="Blob SmallBlob RedBlob" onclick="SelectBlobP1(this)"></div>
-            <div id="RedBlob2" class="Blob SmallBlob RedBlob" onclick="SelectBlobP1(this)"></div>
+            <div id="RedBlob1" class="Blob SmallBlob Red" onclick="SelectBlobP1(this)"></div>
+            <div id="RedBlob2" class="Blob SmallBlob Red" onclick="SelectBlobP1(this)"></div>
+        </div>
+
+        <div id="RedBuildings">
+            <div id="RedSpawner" class="Blob Red Spawner"></div>
         </div>
 
 
         <div id="BlueBlobs">
-            <div id="BlueBlob1" class="Blob SmallBlob BlueBlob" onclick="SelectBlobP2(this)"></div>
+            <div id="BlueBlob1" class="Blob SmallBlob Blue" onclick="SelectBlobP2(this)"></div>
+            <div id="BlueBlob2" class="Blob SmallBlob Blue" onclick="SelectBlobP2(this)"></div>
+        </div>
+
+        <div id="BlueBuildings">
+            <div id="BlueSpawner" class="Blob Blue Spawner"></div>
         </div>
 
 
