Put all selection classes into one. Added (themed border) Building class
SelectedP1 and SelectedP2 and selection for Buildings are all Selected
now. JS checks blobs for Selected+Red classes for SelectedP1. Building
class instead of Blob class for Buildings, with their own (themed)
border.

--- a/skirmish.html
+++ b/skirmish.html
@@ -41,22 +41,22 @@
 
 
         <div id="RedBlobs">
-            <div id="RedBlob1" class="Blob SmallBlob Red" onclick="SelectBlobP1(this)"></div>
-            <div id="RedBlob2" class="Blob SmallBlob Red" onclick="SelectBlobP1(this)"></div>
+            <div id="RedBlob1" class="Blob SmallBlob Red" onclick="Select(this)"></div>
+            <div id="RedBlob2" class="Blob SmallBlob Red" onclick="Select(this)"></div>
         </div>
 
         <div id="RedBuildings">
-            <div id="RedSpawner" class="Blob Red Spawner"></div>
+            <div id="RedSpawner" class="Building Red Spawner" onclick="Select(this)"></div>
         </div>
 
 
         <div id="BlueBlobs">
-            <div id="BlueBlob1" class="Blob SmallBlob Blue" onclick="SelectBlobP2(this)"></div>
-            <div id="BlueBlob2" class="Blob SmallBlob Blue" onclick="SelectBlobP2(this)"></div>
+            <div id="BlueBlob1" class="Blob SmallBlob Blue" onclick="Select(this)"></div>
+            <div id="BlueBlob2" class="Blob SmallBlob Blue" onclick="Select(this)"></div>
         </div>
 
         <div id="BlueBuildings">
-            <div id="BlueSpawner" class="Blob Blue Spawner"></div>
+            <div id="BlueSpawner" class="Building Blue Spawner" onclick="Select(this)"></div>
         </div>
 
 
