--- a/skirmish.html
+++ b/skirmish.html
@@ -27,8 +27,12 @@
             <button id="DarkMode1Button" onclick="DarkMode1On()">DarkMode</button>
             <button id="DarkMode2Button" onclick="DarkMode2On()">DarkMode2</button>
             <button id="LightModeButton" onclick="LightModeOn()">LightMode</button>
-            <button id="SpawnRedButton" onclick="CreateRedBlob()">Spawn</button>
-            <button id="SpawnBlueButton" onclick="CreateBlueBlob()">Spawn</button>
+            <button id="SpawnRedButton" onclick="CreateRedBlob()">Spawn(R)</button>
+            <button id="SpawnBlueButton" onclick="CreateBlueBlob()">Spawn(B)</button>
+            <button id="SelectAllRed" onclick="SelectAllRedBlobs()">SelectAllBlobs(R)</button>
+            <button id="SelectAllBlue" onclick="SelectAllBlueBlobs()">SelectAllBlobs(B)</button>
+            <button id="UnSelectAllRed" onclick="UnSelectAllRedBlobs()">UnSelectAllBlobs(R)</button>
+            <button id="UnSelectAllBlue" onclick="UnSelectAllBlueBlobs()">UnSelectAllBlobs(B)</button>
         </div>
 
 
