Added DevModeOn/Off button. Turns contextmenu back on in DevMode.

--- a/skirmish.html
+++ b/skirmish.html
@@ -33,6 +33,8 @@
             <button id="SelectAllBlue" onclick="SelectAllBlueBlobs()">SelectAllBlobs(B)</button>
             <button id="UnSelectAllRed" onclick="UnSelectAllRedBlobs()">UnSelectAllBlobs(R)</button>
             <button id="UnSelectAllBlue" onclick="UnSelectAllBlueBlobs()">UnSelectAllBlobs(B)</button>
+            <button id="DevModeActivate" onclick="DevModeActivate()">DevModeOn</button>
+            <button id="DevModeDeactivate" onclick="DevModeDeactivate()">DevModeOff</button>
         </div>
 
 
