--- a/skirmish.html
+++ b/skirmish.html
@@ -27,14 +27,14 @@
             <button id="DarkMode1Button" onclick="DarkMode1On()">DarkMode</button>
             <button id="DarkMode2Button" onclick="DarkMode2On()">DarkMode2</button>
             <button id="LightModeButton" onclick="LightModeOn()">LightMode</button>
-            <button id="SpawnRedButton" onclick="CreateRedBlob()">Spawn(R)</button>
-            <button id="SpawnBlueButton" onclick="CreateBlueBlob()">Spawn(B)</button>
-            <button id="SelectAllRed" onclick="SelectAllRedBlobs()">SelectAllBlobs(R)</button>
-            <button id="SelectAllBlue" onclick="SelectAllBlueBlobs()">SelectAllBlobs(B)</button>
-            <button id="UnSelectAllRed" onclick="UnSelectAllRedBlobs()">UnSelectAllBlobs(R)</button>
-            <button id="UnSelectAllBlue" onclick="UnSelectAllBlueBlobs()">UnSelectAllBlobs(B)</button>
-            <button id="DevModeActivate" onclick="DevModeActivate()">DevModeOn</button>
-            <button id="DevModeDeactivate" onclick="DevModeDeactivate()">DevModeOff</button>
+            <button id="SpawnButtonRed" onclick="CreateBlobRed()">Spawn(R)</button>
+            <button id="SpawnButtonBlue" onclick="CreateBlobBlue()">Spawn(B)</button>
+            <button id="SelectAllButtonRed" onclick="SelectAllBlobsRed()">SelectAllBlobs(R)</button>
+            <button id="SelectAllButtonBlue" onclick="SelectAllBlobsBlue()">SelectAllBlobs(B)</button>
+            <button id="UnSelectAllButtonRed" onclick="UnSelectAllBlobsRed()">UnSelectAllBlobs(R)</button>
+            <button id="UnSelectAllButtonBlue" onclick="UnSelectAllBlobsBlue()">UnSelectAllBlobs(B)</button>
+            <button id="DevModeOnButton" onclick="DevModeOn()">DevModeOn</button>
+            <button id="DevModeOffButton" onclick="DevModeOff()">DevModeOff</button>
         </div>
 
 
