Moved Color/Player indicator on buttons to front for quick reference.

--- a/skirmish.html
+++ b/skirmish.html
@@ -27,12 +27,12 @@
             <button id="DarkMode1Button" onclick="DarkMode1On()">DarkMode</button>
             <button id="DarkMode2Button" onclick="DarkMode2On()">DarkMode2</button>
             <button id="LightModeButton" onclick="LightModeOn()">LightMode</button>
-            <button id="SpawnButtonRed" onclick="CreateBlobRed()">Spawn(R)</button>
-            <button id="SpawnButtonBlue" onclick="CreateBlobBlue()">Spawn(B)</button>
-            <button id="SelectAllButtonRed" onclick="SelectAllBlobsRed()">SelectAllBlobs(R)</button>
-            <button id="SelectAllButtonBlue" onclick="SelectAllBlobsBlue()">SelectAllBlobs(B)</button>
-            <button id="UnSelectAllButtonRed" onclick="UnSelectAllBlobsRed()">UnSelectAllBlobs(R)</button>
-            <button id="UnSelectAllButtonBlue" onclick="UnSelectAllBlobsBlue()">UnSelectAllBlobs(B)</button>
+            <button id="SpawnButtonRed" onclick="CreateBlobRed()">(R)Spawn</button>
+            <button id="SpawnButtonBlue" onclick="CreateBlobBlue()">(B)Spawn</button>
+            <button id="SelectAllButtonRed" onclick="SelectAllBlobsRed()">(R)SelectAllBlobs</button>
+            <button id="SelectAllButtonBlue" onclick="SelectAllBlobsBlue()">(B)SelectAllBlobs</button>
+            <button id="UnSelectAllButtonRed" onclick="UnSelectAllBlobsRed()">(R)UnSelectAllBlobs</button>
+            <button id="UnSelectAllButtonBlue" onclick="UnSelectAllBlobsBlue()">(B)UnSelectAllBlobs</button>
             <button id="DevModeOnButton" onclick="DevModeOn()">DevModeOn</button>
             <button id="DevModeOffButton" onclick="DevModeOff()">DevModeOff</button>
         </div>
