Added Checkboxes for some future DevMode Settings. Foundation only.
The actualy functionality of the settings is implemented in a later
commit, this stores the settings in a variable.
All settings have auto-setting defaults for DevModeOff. And initial
defaults for first DevModeOn. After that they remember their setting.

--- a/skirmish.html
+++ b/skirmish.html
@@ -38,6 +38,11 @@
             
             <button id="DevModeOnButton" onclick="DevModeOn()">DevModeOn</button>
             <button id="DevModeOffButton" onclick="DevModeOff()">DevModeOff</button>
+
+            <label id="RemainSelectedCheckboxContainer"><input id="RemainSelectedCheckbox" type="checkbox" onchange="RemainSelectedChecker()"> Blobs remain selected after move</label>
+            <label id="ContextMenuShownCheckboxContainer"><input id="ContextMenuShownCheckbox" type="checkbox" onchange="ContextMenuShownChecker()">Context-menu shown</label>
+            <label id="PromptOnRefreshCheckboxContainer"><input id="PromptOnRefreshCheckbox" type="checkbox" onchange="PromptOnRefreshChecker()">Prompt on refresh</label>
+
         </div>
 
 
