--- a/skirmish.html
+++ b/skirmish.html
@@ -55,22 +55,22 @@
 
 
         <div id="P1Buildings">
-            <div id="P1Spawner" class="Building P1 Spawner" onclick="Select(this)"></div>
+            <div id="P1Spawner" class="Building P1 Spawner"></div>
         </div>
 
         <div id="P1Blobs">
-            <div id="P1Blob1" class="Blob SmallBlob P1" onclick="Select(this)"></div>
-            <div id="P1Blob2" class="Blob SmallBlob P1" onclick="Select(this)"></div>
+            <div id="P1Blob1" class="Blob SmallBlob P1"></div>
+            <div id="P1Blob2" class="Blob SmallBlob P1"></div>
         </div>
 
 
         <div id="P2Buildings">
-            <div id="P2Spawner" class="Building P2 Spawner" onclick="Select(this)"></div>
+            <div id="P2Spawner" class="Building P2 Spawner"></div>
         </div>
 
         <div id="P2Blobs">
-            <div id="P2Blob1" class="Blob SmallBlob P2" onclick="Select(this)"></div>
-            <div id="P2Blob2" class="Blob SmallBlob P2" onclick="Select(this)"></div>
+            <div id="P2Blob1" class="Blob SmallBlob P2"></div>
+            <div id="P2Blob2" class="Blob SmallBlob P2"></div>
         </div>
 
 
