--- a/skirmish.html
+++ b/skirmish.html
@@ -73,6 +73,64 @@
             <div id="P2Blob2" class="Blob SmallBlob P2"></div>
         </div>
 
+        <div id="ResourcePiles">
+            <div id="ResourcePileA" class="ResourcePile">
+                <div id="ResourceA1" class="Resource Resource1"></div>
+                <div id="ResourceA2" class="Resource Resource2"></div>
+                <div id="ResourceA3" class="Resource Resource3"></div>
+                <div id="ResourceA4" class="Resource Resource4"></div>
+                <div id="ResourceA5" class="Resource Resource5"></div>
+                <div id="ResourceA6" class="Resource Resource6"></div>
+                <div id="ResourceA7" class="Resource Resource7"></div>
+                <div id="ResourceA8" class="Resource Resource8"></div>
+                <div id="ResourceA9" class="Resource Resource9"></div>
+                <div id="ResourceA10" class="Resource Resource10"></div>
+                <div id="ResourceA11" class="Resource Resource11"></div>
+                <div id="ResourceA12" class="Resource Resource12"></div>
+                <div id="ResourceA13" class="Resource Resource13"></div>
+                <div id="ResourceA14" class="Resource Resource14"></div>
+                <div id="ResourceA15" class="Resource Resource15"></div>
+                <div id="ResourceA16" class="Resource Resource16"></div>
+                <div id="ResourceA17" class="Resource Resource17"></div>
+                <div id="ResourceA18" class="Resource Resource18"></div>
+                <div id="ResourceA19" class="Resource Resource19"></div>
+                <div id="ResourceA20" class="Resource Resource20"></div>
+                <div id="ResourceA21" class="Resource Resource21"></div>
+                <div id="ResourceA22" class="Resource Resource22"></div>
+                <div id="ResourceA23" class="Resource Resource23"></div>
+                <div id="ResourceA24" class="Resource Resource24"></div>
+                <div id="ResourceA25" class="Resource Resource25"></div>
+            </div>
+
+            <div id="ResourcePileB" class="ResourcePile">
+                <div id="ResourceB1" class="Resource Resource1"></div>
+                <div id="ResourceB2" class="Resource Resource2"></div>
+                <div id="ResourceB3" class="Resource Resource3"></div>
+                <div id="ResourceB4" class="Resource Resource4"></div>
+                <div id="ResourceB5" class="Resource Resource5"></div>
+                <div id="ResourceB6" class="Resource Resource6"></div>
+                <div id="ResourceB7" class="Resource Resource7"></div>
+                <div id="ResourceB8" class="Resource Resource8"></div>
+                <div id="ResourceB9" class="Resource Resource9"></div>
+                <div id="ResourceB10" class="Resource Resource10"></div>
+                <div id="ResourceB11" class="Resource Resource11"></div>
+                <div id="ResourceB12" class="Resource Resource12"></div>
+                <div id="ResourceB13" class="Resource Resource13"></div>
+                <div id="ResourceB14" class="Resource Resource14"></div>
+                <div id="ResourceB15" class="Resource Resource15"></div>
+                <div id="ResourceB16" class="Resource Resource16"></div>
+                <div id="ResourceB17" class="Resource Resource17"></div>
+                <div id="ResourceB18" class="Resource Resource18"></div>
+                <div id="ResourceB19" class="Resource Resource19"></div>
+                <div id="ResourceB20" class="Resource Resource20"></div>
+                <div id="ResourceB21" class="Resource Resource21"></div>
+                <div id="ResourceB22" class="Resource Resource22"></div>
+                <div id="ResourceB23" class="Resource Resource23"></div>
+                <div id="ResourceB24" class="Resource Resource24"></div>
+                <div id="ResourceB25" class="Resource Resource25"></div>
+            </div>
+        </div>
+
 
     </div>
 </body>
