Our first(currently only) building is now Spanwer and Refinery.
It makes little sense for 2 buildings with the same blobular shape, to
have two different functions and names. Spawning and Gathering makes
sense from the same building.

--- a/skirmish.html
+++ b/skirmish.html
@@ -55,7 +55,7 @@
 
 
         <div id="P1Buildings">
-            <div id="P1Spawner" class="Building P1 Spawner"></div>
+            <div id="P1Spawner" class="Building P1 Spawner Refinery"></div>
         </div>
 
         <div id="P1Blobs">
@@ -65,7 +65,7 @@
 
 
         <div id="P2Buildings">
-            <div id="P2Spawner" class="Building P2 Spawner"></div>
+            <div id="P2Spawner" class="Building P2 Spawner Refinery"></div>
         </div>
 
         <div id="P2Blobs">
