First 25 resources suffixed with Base. The middle BaseResource hidden
These 25 predefined resources now serve the purpose of indicating the
location for resources. They might all be hidden later. The middle
Resourcespot will probably not be used for real resources to sit in,
therefore it is hidden.

--- a/skirmish.html
+++ b/skirmish.html
@@ -75,59 +75,59 @@
 
         <div id="ResourcePiles">
             <div id="ResourcePileA" class="ResourcePile">
-                <div id="ResourceA1" class="Resource Resource1"></div>
-                <div id="ResourceA2" class="Resource Resource2"></div>
-                <div id="ResourceA3" class="Resource Resource3"></div>
-                <div id="ResourceA4" class="Resource Resource4"></div>
-                <div id="ResourceA5" class="Resource Resource5"></div>
-                <div id="ResourceA6" class="Resource Resource6"></div>
-                <div id="ResourceA7" class="Resource Resource7"></div>
-                <div id="ResourceA8" class="Resource Resource8"></div>
-                <div id="ResourceA9" class="Resource Resource9"></div>
-                <div id="ResourceA10" class="Resource Resource10"></div>
-                <div id="ResourceA11" class="Resource Resource11"></div>
-                <div id="ResourceA12" class="Resource Resource12"></div>
-                <div id="ResourceA13" class="Resource Resource13"></div>
-                <div id="ResourceA14" class="Resource Resource14"></div>
-                <div id="ResourceA15" class="Resource Resource15"></div>
-                <div id="ResourceA16" class="Resource Resource16"></div>
-                <div id="ResourceA17" class="Resource Resource17"></div>
-                <div id="ResourceA18" class="Resource Resource18"></div>
-                <div id="ResourceA19" class="Resource Resource19"></div>
-                <div id="ResourceA20" class="Resource Resource20"></div>
-                <div id="ResourceA21" class="Resource Resource21"></div>
-                <div id="ResourceA22" class="Resource Resource22"></div>
-                <div id="ResourceA23" class="Resource Resource23"></div>
-                <div id="ResourceA24" class="Resource Resource24"></div>
-                <div id="ResourceA25" class="Resource Resource25"></div>
+                <div id="ResourceA1Base" class="Resource Resource1"></div>
+                <div id="ResourceA2Base" class="Resource Resource2"></div>
+                <div id="ResourceA3Base" class="Resource Resource3"></div>
+                <div id="ResourceA4Base" class="Resource Resource4"></div>
+                <div id="ResourceA5Base" class="Resource Resource5"></div>
+                <div id="ResourceA6Base" class="Resource Resource6"></div>
+                <div id="ResourceA7Base" class="Resource Resource7"></div>
+                <div id="ResourceA8Base" class="Resource Resource8"></div>
+                <div id="ResourceA9Base" class="Resource Resource9"></div>
+                <div id="ResourceA10Base" class="Resource Resource10"></div>
+                <div id="ResourceA11Base" class="Resource Resource11"></div>
+                <div id="ResourceA12Base" class="Resource Resource12"></div>
+                <div id="ResourceA13Base" class="Resource Resource13"></div>
+                <div id="ResourceA14Base" class="Resource Resource14"></div>
+                <div id="ResourceA15Base" class="Resource Resource15"></div>
+                <div id="ResourceA16Base" class="Resource Resource16"></div>
+                <div id="ResourceA17Base" class="Resource Resource17"></div>
+                <div id="ResourceA18Base" class="Resource Resource18"></div>
+                <div id="ResourceA19Base" class="Resource Resource19"></div>
+                <div id="ResourceA20Base" class="Resource Resource20"></div>
+                <div id="ResourceA21Base" class="Resource Resource21"></div>
+                <div id="ResourceA22Base" class="Resource Resource22"></div>
+                <div id="ResourceA23Base" class="Resource Resource23"></div>
+                <div id="ResourceA24Base" class="Resource Resource24"></div>
+                <div id="ResourceA25Base" class="Resource Resource25"></div>
             </div>
 
             <div id="ResourcePileB" class="ResourcePile">
-                <div id="ResourceB1" class="Resource Resource1"></div>
-                <div id="ResourceB2" class="Resource Resource2"></div>
-                <div id="ResourceB3" class="Resource Resource3"></div>
-                <div id="ResourceB4" class="Resource Resource4"></div>
-                <div id="ResourceB5" class="Resource Resource5"></div>
-                <div id="ResourceB6" class="Resource Resource6"></div>
-                <div id="ResourceB7" class="Resource Resource7"></div>
-                <div id="ResourceB8" class="Resource Resource8"></div>
-                <div id="ResourceB9" class="Resource Resource9"></div>
-                <div id="ResourceB10" class="Resource Resource10"></div>
-                <div id="ResourceB11" class="Resource Resource11"></div>
-                <div id="ResourceB12" class="Resource Resource12"></div>
-                <div id="ResourceB13" class="Resource Resource13"></div>
-                <div id="ResourceB14" class="Resource Resource14"></div>
-                <div id="ResourceB15" class="Resource Resource15"></div>
-                <div id="ResourceB16" class="Resource Resource16"></div>
-                <div id="ResourceB17" class="Resource Resource17"></div>
-                <div id="ResourceB18" class="Resource Resource18"></div>
-                <div id="ResourceB19" class="Resource Resource19"></div>
-                <div id="ResourceB20" class="Resource Resource20"></div>
-                <div id="ResourceB21" class="Resource Resource21"></div>
-                <div id="ResourceB22" class="Resource Resource22"></div>
-                <div id="ResourceB23" class="Resource Resource23"></div>
-                <div id="ResourceB24" class="Resource Resource24"></div>
-                <div id="ResourceB25" class="Resource Resource25"></div>
+                <div id="ResourceB1Base" class="Resource Resource1"></div>
+                <div id="ResourceB2Base" class="Resource Resource2"></div>
+                <div id="ResourceB3Base" class="Resource Resource3"></div>
+                <div id="ResourceB4Base" class="Resource Resource4"></div>
+                <div id="ResourceB5Base" class="Resource Resource5"></div>
+                <div id="ResourceB6Base" class="Resource Resource6"></div>
+                <div id="ResourceB7Base" class="Resource Resource7"></div>
+                <div id="ResourceB8Base" class="Resource Resource8"></div>
+                <div id="ResourceB9Base" class="Resource Resource9"></div>
+                <div id="ResourceB10Base" class="Resource Resource10"></div>
+                <div id="ResourceB11Base" class="Resource Resource11"></div>
+                <div id="ResourceB12Base" class="Resource Resource12"></div>
+                <div id="ResourceB13Base" class="Resource Resource13"></div>
+                <div id="ResourceB14Base" class="Resource Resource14"></div>
+                <div id="ResourceB15Base" class="Resource Resource15"></div>
+                <div id="ResourceB16Base" class="Resource Resource16"></div>
+                <div id="ResourceB17Base" class="Resource Resource17"></div>
+                <div id="ResourceB18Base" class="Resource Resource18"></div>
+                <div id="ResourceB19Base" class="Resource Resource19"></div>
+                <div id="ResourceB20Base" class="Resource Resource20"></div>
+                <div id="ResourceB21Base" class="Resource Resource21"></div>
+                <div id="ResourceB22Base" class="Resource Resource22"></div>
+                <div id="ResourceB23Base" class="Resource Resource23"></div>
+                <div id="ResourceB24Base" class="Resource Resource24"></div>
+                <div id="ResourceB25Base" class="Resource Resource25"></div>
             </div>
         </div>
 
