Minor change to the wording of the <IE10 warning.

--- a/skirmish.html
+++ b/skirmish.html
@@ -10,7 +10,7 @@
 
     <!--[if lte IE 9]>
         <script>
-            alert("You seem to be using a version of Internet Explorer below IE10. This means you browser is no longer recieving security updates. Please consider upgrading to IE11, or even better, use Firefox, Chrome or any other browser. Blobby probably won't function properly on this version of IE")
+            alert("You seem to be using IE9 or a lower version. This means you browser and most likely your entire operating system are no longer recieving security updates. Please consider upgrading to IE11, or even better, use Firefox, Chrome, Edge or any other browser. Blobby probably won't function properly on this version of IE")
         </script>
      <![endif]-->
 </head>
