--- a/skirmish.html
+++ b/skirmish.html
@@ -31,10 +31,10 @@
             <button id="SpawnButtonP1" onclick="CreateBlobP1()">(P1)Spawn</button>
             <button id="SpawnButtonP2" onclick="CreateBlobP2()">(P2)Spawn</button>
 
-            <button id="SelectAllButtonP1" onclick="SelectAllBlobsP1()">(P1)SelectAllBlobs</button>
-            <button id="SelectAllButtonP2" onclick="SelectAllBlobsP2()">(P2)SelectAllBlobs</button>
-            <button id="UnSelectAllButtonP1" onclick="UnSelectAllBlobsP1()">(P1)UnSelectAllBlobs</button>
-            <button id="UnSelectAllButtonP2" onclick="UnSelectAllBlobsP2()">(P2)UnSelectAllBlobs</button>
+            <button id="SelectAllButtonP1" onclick="SelectAllBlobsMatching('Blob', 'P1')">(P1)SelectAllBlobs</button>
+            <button id="SelectAllButtonP2" onclick="SelectAllBlobsMatching('Blob', 'P2')">(P2)SelectAllBlobs</button>
+            <button id="UnSelectAllButtonP1" onclick="UnSelectAllBlobsMatching('Blob', 'P1')">(P1)UnSelectAllBlobs</button>
+            <button id="UnSelectAllButtonP2" onclick="UnSelectAllBlobsMatching('Blob', 'P2')">(P2)UnSelectAllBlobs</button>
 
             <button id="DevModeOnButton" onclick="DevModeOn()">DevModeOn</button>
             <button id="DevModeOffButton" onclick="DevModeOff()">DevModeOff</button>
