Added a few more test blobs at start.

--- a/skirmish.html
+++ b/skirmish.html
@@ -61,6 +61,9 @@
         <div id="P1Blobs">
             <div id="P1Blob1" class="Blob SmallBlob P1"></div>
             <div id="P1Blob2" class="Blob SmallBlob P1"></div>
+            <div id="P1Blob3" class="Blob SmallBlob P1"></div>
+            <div id="P1Blob4" class="Blob SmallBlob P1"></div>
+            <div id="P1Blob5" class="Blob SmallBlob P1"></div>
         </div>
 
 
@@ -71,6 +74,9 @@
         <div id="P2Blobs">
             <div id="P2Blob1" class="Blob SmallBlob P2"></div>
             <div id="P2Blob2" class="Blob SmallBlob P2"></div>
+            <div id="P2Blob3" class="Blob SmallBlob P2"></div>
+            <div id="P2Blob4" class="Blob SmallBlob P2"></div>
+            <div id="P2Blob5" class="Blob SmallBlob P2"></div>
         </div>
 
         <div id="ResourcePiles">
